<resources>
    <string name="app_name">UrSafe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">News</string>
    <string name="menu_view">Wanted List</string>
    <string name="menu_emergency">Emergency Contacts</string>
    <string name="menu_profile">Profile</string>
    <string name="UrSafe">UrSafe</string>
    <string name="Civilian">Welcome Civilian</string>
    <string name="name">Full name</string>
    <string name="nic">NIC</string>
    <string name="email">Email</string>
    <string name="phone">Contact no</string>
    <string name="label2">Reset Password</string>
    <string name="button">Reset</string>
    <string name="input2">Confirm Password</string>
    <string name="input1">Enter Password</string>
    <string name="civilian_name">Leela Kamal</string>
    <string name="civilian_nic">1100022345V</string>
    <string name="civilian_email">leela@gmail.com</string>
    <string name="civilian_phone">0770001122</string>
    <string name="deleteaccount">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Alert Zone</string>
    <string name="msg1">A lady had lost her ATM card near the bus stop, so if anyone find it please inform.</string>
    <string name="msg">The Police station is searching for the criminal.</string>
    <string name="incident2">Lost Case</string>
    <string name="incident1">Searching the criminal</string>

    <string name="Email">Username</string>
    <string name="Pass">Password</string>
    <string name="signUp">Don\'t have an account?</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>

    <string name="civilian">Civilian Registration</string>
    <string name="emailAdd">Email address</string>
    <string name="contact">Contact number</string>
    <string name="confirmPass">Confirm password</string>
    <string name="stationId">Station ID</string>
    <string name="sLocation">Station location</string>
    <string name="policeReg">Police Station Registration</string>

    <string name="title_activity_police_dashboard">PoliceDashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_policedash">Policedash</string>

    <string name="Station">Welcome Police Station</string>

    <string name="stationid">Station ID</string>
    <string name="location">Station location</string>
    <string name="station_name">Kotte Police station</string>
    <string name="station_location">101, Galle Road Kotte</string>
    <string name="station_email">kotte@gmail.com</string>
    <string name="station_phone">0112002002</string>

    <string name="report">Wanted Alerts</string>
    <string name="reportcriminal">Criminal Name :</string>
    <string name="report_info">Information :</string>
    <string name="reportlocation">Tracked Location:</string>

    <string name="criminalName">Criminal Name</string>
    <string name="criminalAge">Criminal Age</string>
    <string name="suspectedAreas">Suspected Area</string>
    <string name="criminalHeight">Criminal Height</string>
    <string name="lastSeen">Last Seen</string>
    <string name="addCriminal">Add Criminal</string>
    <string name="criminalRegistry">Criminal Registration</string>
    <string name="crimialregister">Criminal Register</string>


    <string name="contacts">Hotlines</string>
    <string name="addemergencyname">Hotline Name</string>
    <string name="addemergencyno">Hotline Number</string>
    <string name="reportdescription">Details :</string>
    <string name="enterlocation">Enter Location :</string>
    <string name="reportcriminial">Report</string>
    <string name="tittle">Title :</string>
    <string name="alert">Send Alert</string>
    <string name="dltcrim">Delete</string>
    <string name="edt">Edit</string>

    <string name="criminals">Criminal Profiles</string>

</resources>