<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/police_navigation"
    app:startDestination="@id/nav_viewnews">

    <fragment
        android:id="@+id/nav_viewnews"
        android:name="com.example.mad.ui.ViewNews.ViewNewsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/viewnews" />

    <fragment
        android:id="@+id/nav_criminal_alert"
        android:name="com.example.mad.ui.CriminalAlert.CriminalAlertFragment"
        android:label="@string/report"
        tools:layout="@layout/criminal_alert"/>

    <fragment
        android:id="@+id/nav_crreg"
        android:name="com.example.mad.ui.CriminalRegister.CriminalRegisterFragment"
        android:label="@string/criminalRegistry"
        tools:layout="@layout/criminal_register" />

    <fragment
        android:id="@+id/nav_prof"
        android:name="com.example.mad.ui.Policeprofile.PoliceprofileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/police_profile" />
    <fragment
        android:id="@+id/nav_emergency_edit"
        android:name="com.example.mad.ui.EmergencyContactsEdit.EmergencyEditFragment"
        android:label="Hotlines"
        tools:layout="@layout/emergency_contact_edit" />
    <fragment
        android:id="@+id/nav_criminal_prof"
        android:name="com.example.mad.ui.CriminalProfile.CriminalProfile"
        android:label="Criminal Profiles"
        tools:layout="@layout/criminal_profile_fragment" />


</navigation>