<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navy"
    tools:context=".ui.CriminalRegister.CriminalRegisterFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="381dp"
        android:layout_height="62dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/criminalRegistry"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="65dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/stationid"
        android:text="@string/criminalName"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="65dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/lastSeen"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="42dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/suspectedAreas"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/textView10"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="63dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/criminalHeight"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/textView11"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="37dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/station_location"
        android:text="@string/criminalAge"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="173dp"
        android:layout_height="75dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="148dp"
        android:backgroundTint="@color/buttonLoginColor"
        android:text="@string/addCriminal"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.157" />

</androidx.constraintlayout.widget.ConstraintLayout>