<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".CivilianRegister">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="381dp"
        android:layout_height="62dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/civilian"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="65dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/name"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="42dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/confirmPass"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="65dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/Pass"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="42dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/contact"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/textView10"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="63dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/emailAdd"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/textView11"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="37dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/nic"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="134dp"
        android:backgroundTint="@color/buttonLoginColor"
        android:text="@string/register"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>