<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".Login">

    <EditText
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="65dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="35dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:hint="@string/Email"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="282dp"
        android:layout_height="65dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="63dp"
        android:background="@color/colorWhiteTrans"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:hint="@string/Pass"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="153dp"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/buttonLoginColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        tools:text="@string/register" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="208dp"
        android:layout_height="80dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="153dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textColor="@color/colorInput"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="134dp"
        android:layout_height="65dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="130dp"
        android:backgroundTint="@color/buttonLoginColor"
        android:text="@string/Login"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>